Adds color palette link in comment in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* https://coolors.co/palette/00a6fb-0582ca-006494-003554-051923 <-- color palette link */
+
 body {
     margin: 0;
     background: #003554;
